--- a/lesson9/substrate-node-template/pallets/template/Cargo.toml
+++ b/lesson9/substrate-node-template/pallets/template/Cargo.toml
@@ -14,6 +14,16 @@ features = ['derive']
 package = 'parity-scale-codec'
 version = '1.3.0'
 
+[dependencies.serde_json]
+version = '1'
+default-features = false
+git = 'https://github.com/Xanewok/json'
+branch = 'no-std'
+features = ["alloc"]
+
+[dependencies]
+alt_serde = { version = "1", default-features = false, features = ["derive"] }
+
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
