--- a/lesson9/substrate-node-template/pallets/template/Cargo.toml
+++ b/lesson9/substrate-node-template/pallets/template/Cargo.toml
@@ -8,21 +8,14 @@ name = 'pallet-template'
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
 version = '2.0.0-rc2'
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.0'
-
-[dependencies.serde_json]
-version = '1'
-default-features = false
-git = 'https://github.com/Xanewok/json'
-branch = 'no-std'
-features = ["alloc"]
-
 [dependencies]
+# external dependencies
+parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
+parking_lot = "0.10.0"
 alt_serde = { version = "1", default-features = false, features = ["derive"] }
+# `alt_serde_json` is not updated. This customized one has latest alloc feature and pull in `alt_serde`.
+serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
+
 
 [dependencies.frame-support]
 default-features = false
@@ -81,7 +74,7 @@ version = '2.0.0-rc2'
 [features]
 default = ['std']
 std = [
-    'codec/std',
+    'parity-scale-codec/std',
     'frame-support/std',
     'frame-system/std',
     'sp-core/std',
